# crewAI-examples

General_Report_Generator/: agents.py  main.py  pyproject.toml  tasks.py
General_Report_Generator/mytools/: search_tools.py
trip_planner_from_scratch/: agents.py  main.py  pyproject.toml  tasks.py  unit_test.py
